Fix de overflow en juegos

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -608,7 +608,7 @@ footer {
   display: flex;
   justify-content: center;
   padding: 3px;
-  min-width: fit-content; }
+  overflow-x: auto; }
   .jIcons img {
     height: 32px;
     width: 32px;
